<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Member">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <Button
            android:id="@+id/MemViewClasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Classes" />

        <Button
            android:id="@+id/SearchByClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search By Class Name" />

        <Button
            android:id="@+id/SearchByDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Search By Day" />

        <Button
            android:id="@+id/ViewEnrolled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Enrolled Classes" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>